Added Single Player mode and Few other changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".Splashscreen"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".GamePage" />
         <activity android:name=".GamePage2" />
-        <activity android:name=".game"></activity>
+        <activity android:name=".game" />
+        <activity
+            android:name=".Singleplayer"
+            android:label="@string/title_activity_singleplayer"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
